--- a/src/station10.html
+++ b/src/station10.html
@@ -10,6 +10,12 @@
   <body>
     <svg viewBox="0, 0, 500, 500" xmlns="http://www.w3.org/2000/svg">
       <rect x="0" y="0" width="100px" height="100px" />
+
+      <style>
+        rect{
+          fill:#008000;
+        }
+      </style>
     </svg>
   </body>
 </html>
