--- a/src/station11.html
+++ b/src/station11.html
@@ -9,6 +9,12 @@
   <body>
     <main>
       <form action="" method="post">
+        <label>Email:</label>
+        <input type="email" id="email" required/><br>
+        <label>パスワード</label>
+        <input type="password" minlegnth="6" id="password" required/><br>
+        <label>ニックネーム</label>
+        <input type="text" maxlength="20" id="nickname"/> <br>
         <button type="submit">送信</button>
       </form>
     </main>
