--- a/src/station11.html
+++ b/src/station11.html
@@ -12,7 +12,7 @@
         <label>Email:</label>
         <input type="email" id="email" required/><br>
         <label>パスワード</label>
-        <input type="password" minlegnth="6" id="password" required/><br>
+        <input type="password" minlength="6" id="password" required/><br>
         <label>ニックネーム</label>
         <input type="text" maxlength="20" id="nickname"/> <br>
         <button type="submit">送信</button>
