Dev Toolに表示された内容を転記（改行や空白を削除）

--- a/src/station12.html
+++ b/src/station12.html
@@ -8,8 +8,7 @@
   </head>
   <body>
     <!-- この<p>の中にレスポンスをコピペする -->
-    <p>
-
+    <p>{"message": "https:\/\/images.dog.ceo\/breeds\/retriever-flatcoated\/n02099267_1069.jpg","status": "success"}
     </p>
     <button onclick="fetchApi()">リクエスト</button>
   </body>
